# stitch

./: .gitignore  Implementation.md  README.md  build.zig  cish.py  lex.py  parse.py  prototype  prototype.py  script-tests  stitch-tests  test  test2  tokens.py  tokens.txt
assetsfortest/: hellomsg  testlex
c_src/: lex.c  lex.h
c_src/tiny-regex-c/: README.md
examples/: argv  argv-to-lines  arrays  bash-pitfalls  chive  cleanup  datetime  first  from-readme  gitchanges  ldd  ldd.original_bash  misc  multiline  rotate
prototype/: main.py
src/: block_list.zig  lex.c  lex.h  lex.zig  meson.build  parse.zig  run.zig  stitch.zig  testlex.c
src/tiny-regex-c/: README.md  re.c  re.h  update
src/tokens/: compiler.c  generate-tokens-c
src/tools/: generate-tokens-c  lexfile.c  testlex.c  tokencompiler.c
